--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+# Clone TPM repository using "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm" for this configuration to take affect
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
