Added TMUX Config Documentation and key remaps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,53 @@
 # Clone TPM repository using "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm" for this configuration to take affect
 
+##################################### Common TMUX Commands ###########################################
+
+
+############################### Session Commands ########################################################
+# prefix + d (OR) tmux detach                   - Detach a session
+# tmux ls                                       - List all the active sessions
+# tmux attach -t 'session number'               - Attach a session
+# tmux new -s 'session name'                    - Create a named session
+# prefix + s                                    - To see a list of sessions and travel between sessions
+# tmux kill-session -t 'session name'           - To Kill a session
+# prefix + x (OR) Ctrl + d                      - To Kill a pane
+
+################################ Window Commands #########################################################
+# tmux new-window -n fried-rice                 - Creates new window named fired-rice
+# prefix + c                                    - Create a new window
+# prefix + n                                    - Go to next window  
+# prefix + p                                    - Go to previous window
+# prefix + w                                    - To see a list of sessions and travel between sessions
+# prefix + ,                                    - Rename a window
+# tmux kill-window -t ramen (OR)
+# tmux killw -t ramen                           - Kills current window
+
+################################## Pane Commands ###########################################################
+# tmux split-window -h (OR) prefix + %          - Split a window horizontally
+# tmux split-window -v (OR) prefix + "          - Split a window vertically
+# prefix + q                                    - Display pane numbers
+# prefix + q + 1                                - Go to pane numbered 1
+# prefix + Ctrl + Arrow                         - To resize a pane
+# prefix + z                                    - Zoom a pane to 100%
+# prefix + { (OR) }                             - Swap panes
+# prefix + Ctrl + o                             - Rotate panes
+
+#################################### Layout Commands #######################################################
+# tmux select-layout even-horizontal            - Layout Selection
+# tmux select-layout even-vertical              - Layout Selection
+# tmux select-layout main-vertical              - Layout Selection
+# tmux select-layout main-horizontal            - Layout Selection
+# tmux select-layout main-horizontal            - Layout Selection
+# prefix + space                                - Toggle between layouts
+
+################################### Miscellaneous ##########################################################
+# tmux kill-server                              - Kill the tmux server and all the window and panes inside it
+# tmux source-file ~/.tmux.conf                 - Source config file from WITHIN tmux
+
+################################### References #############################################################
+# https://dev.to/iggredible/tmux-tutorial-for-beginners-5c52
+
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'seebi/tmux-colors-solarized'
@@ -24,6 +72,10 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# bind keys for pane creation
+bind v split-window -hc "#{pane_current_path}"
+bind h split-window -vc "#{pane_current_path}"
+
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -46,6 +98,9 @@ set -g mouse on
 
 # Other changes
 set -g history-limit 200000
+
+# Keep Current Path for New Window
+bind c new-window -c "#{pane_current_path}"
 
 # Reload tmux configuration file
 bind r source-file ~/.tmux.conf \; display "Reloaded config"
