--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #tmux-colors-solorized theme mode
 set -g @colors-solarized 'dark'
 
+# status bar sytle and color. color can be picked from 256-colors found at https://www.ditig.com/256-colors-cheat-sheet
+set -g status-style default
+set -g status-fg SteelBlue3
+
+# set pane color
+set -g pane-active-border-style fg=SteelBlue3
+set -g pane-border-fg White
+
 # set 256 color
 #set -g default-terminal "screen-256color"
 
