Commented out all the Plugin related config, Added xterm-256 as terminal and fixed a syntax error in border color config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,12 +49,12 @@
 
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'seebi/tmux-colors-solarized'
+#set -g @plugin 'tmux-plugins/tmux-logging'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -70,10 +70,10 @@ set -g status-fg SteelBlue3
 
 # set pane color
 set -g pane-active-border-style fg=SteelBlue3
-set -g pane-border-fg White
+set -g pane-border-style fg=White
 
 # set 256 color
-#set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -116,6 +116,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded config"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+#run -b '~/.tmux/plugins/tpm/tpm'
 
 
